--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.16",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "motion": "^12.24.0",
